--- a/public/admin/stylechat.css
+++ b/public/admin/stylechat.css
@@ -476,12 +476,14 @@ body {
 }
 .conversation-item-text {
     padding: 12px 16px 8px;
-    background-color: var(--neutral-900);
+    background-color: var(--slate-100);
     box-shadow: 0 2px 12px -2px rgba(0, 0, 0, .1);
      font-size: 25px;
     border-radius: 6px;
     line-height: 1.5;
     margin-left: 32px;
+    word-wrap: break-word; 
+    overflow-wrap: break-word;
 }
 .conversation-item.me .conversation-item-text {
     margin-left: unset;
